# klsxx.io

./: CMakeLists.txt  README.md
Common/Module/: IP.cpp  Status.cpp  TCPUtil.cpp
Common/Published/kls/io/: IP.h  Status.h  TCPUtil.h
Linux5/Module/: Block.cpp  Error.cpp  Error.h  IP.h  Stream.cpp  TCP.cpp  Uring.cpp  Uring.h
Linux5/Published/kls/io/: Await.h  Block.h  TCP.h
NTOS/Module/: Block.cpp  Error.cpp  IOCP.h  IP.h  TCP.cpp  WSA.h
NTOS/Published/kls/io/: Await.h  Block.h  TCP.h
Tests/: Block.cpp  TCP.cpp
